Atualizações finais
