# src/backend/src/models/exiba_setor_model.js
@@ -2,14 +2,24 @@ const knexfile = require('../../knexfile')
 const knex = require('knex')(knexfile)
 
 module.exports = {
-    get_busca_setor: (setor)=>{
+    get_setores: ()=>{
         try {
-            const setor_buscado = setor
             return knex('funcionarios')
-            .select('nome', 'cpf', 'setor','cargo')
-            .orderByRaw(`setor = '${setor_buscado}' DESC, nivel ASC`)
+            .distinct('setor')
+            .select('setor')
         } catch (error) {
             console.log(error.message)
+            return []
+        }
+    },
+
+    get_funcionarios: ()=>{
+        try {
+            return knex('funcionarios')
+            .select('nome', 'setor')
+        } catch (error) {
+            console.log(error.message)
+            return []
         }
     }
 }
