# src/backend/src/models/lista_funcionario_model.js
@@ -2,21 +2,7 @@ const knexfile = require('../../knexfile')
 const knex = require('knex')(knexfile)
 
 
-module.exports = {
-    // insert_data: (id, nome, cpf, telefone, cargo, setor, dt_nascimento) => {
-    //   const dado_funcionario = {
-    //     id: id,
-    //     nome: nome,
-    //     cpf: cpf,
-    //     telefone: telefone,
-    //     cargo: cargo,
-    //     setor: setor,
-    //     dt_nascimento: dt_nascimento
-    //   }
-
-    //   return knex('funcionarios').insert(dado_funcionario)
-    // },
-    
+module.exports = {   
     get_list_funcionarios : () => {
         return knex('funcionarios')
       }
